--- a/src/public/css/modal.css
+++ b/src/public/css/modal.css
@@ -1,4 +1,3 @@
-/* Modal styling */
 .modal {
   display: none;
   position: fixed;
@@ -6,12 +5,13 @@
   left: 0;
   top: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
   background-color: #fff;
-  margin: 15% auto;
+  margin: 5% auto;
   padding: 20px;
   width: 30vw;
   border-radius: 5px;
