--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Alias Game</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/modal.css">
 </head>
