--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -1,3 +1,10 @@
 <div>
     <h2>Choose your team and start the Game!</h2>
+    <button id="back">back</button>
 </div>
+
+<script>
+  document.getElementById('back').onclick = function(){
+    window.location.replace('/');
+  }
+</script>
