--- a/src/views/partials/gameListItem.handlebars
+++ b/src/views/partials/gameListItem.handlebars
@@ -21,5 +21,5 @@
                     <span class="game-list__item-property">Currently Players:</span>
                     <span class="game-list__item-property-value">{{players.length}}</span>
                 </div>
-                <button class="button button-action button-join">Join the game</button>  
+                <button class="button button-action button-join" id="button-join" data-room-id="{{_id}}">Join the game</button>  
             </div>
