--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -1,10 +1,56 @@
-<div>
-    <h2>Choose your team and start the Game!</h2>
-    <button id="back">back</button>
+<div class='game-lobby'>
+  <h2 class='game-lobby__header'>Choose your team and start the Game!</h2>
+  <button id='back'>back</button>
+
+  <h3 class='game-lobby__game-name'>Game id {{game._id}}</h3>
+
+  <div class='game-lobby__teams'>
+
+    <div class='game-lobby__team1'>
+      <h4>Team 1</h4>
+
+      <ul class='team1__list' id='team1-list'>
+
+        {{#each team1 as |player|}}
+
+          <li class='team1__list__item' id='{{player.userId}}'>
+
+            {{player.userId}}
+
+          </li>
+
+        {{/each}}
+
+      </ul>
+
+      <button class='button button-join-team1' id='button-join-team1'>Join Team1</button>
+    </div>
+
+    <div class='game-lobby__team2'>
+      <h4>Team 2</h4>
+
+      <ul class='team2__list' id='team2-list'>
+
+        {{#each team2 as |player|}}
+
+          <li class='team2__list__item' id='{{player.userId}}'>
+
+            {{player.userId}}
+
+          </li>
+
+        {{/each}}
+
+      </ul>
+
+      <button class='button button-join-team2' id='button-join-team2'>Join Team2</button>
+    </div>
+
+  </div>
+  <button class='button button-danger button-leave-room'>Leave Room</button>
 </div>
 
 <script>
   document.getElementById('back').onclick = function(){
-    window.location.replace('/');
-  }
+  window.location.replace('/'); }
 </script>
