--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>{{ title }}</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/modal.css">
-</head>
-<body>
-  
+  <head>
+    <meta charset='utf-8' />
+    <title>{{title}}</title>
+    <link rel='icon' href='/images/favicon.ico' type='image/x-icon' />
+    <link rel='stylesheet' href='/css/index.css' />
+    <link rel='stylesheet' href='/css/modal.css' />
+    <link rel='stylesheet' href='/css/gameLobby.css' />
+  </head>
+  <body>
 
     {{{body}}}
 
-</body>
+  </body>
 </html>
