--- a/src/views/partials/gameListItem.handlebars
+++ b/src/views/partials/gameListItem.handlebars
@@ -1,25 +1,28 @@
-            
-            <div class="game-list__item-info">
-                <h3 class="game-list__item-title">Game: {{_id}}</h3>
-                <div>
-                    <span class="game-list__item-property">Status:</span>
-                    <span class="game-list__item-property-value">{{status}}</span>
-                </div>
-                <div>
-                    <span class="game-list__item-property">Rounds:</span>
-                    <span class="game-list__item-property-value">{{roundsTotal}}</span>
-                </div>
-                <div>
-                    <span class="game-list__item-property">Time per Round:</span>
-                    <span class="game-list__item-property-value">{{timePerRound}} minutes</span>
-                </div>
-                <div>
-                    <span class="game-list__item-property">Players per Team:</span>
-                    <span class="game-list__item-property-value">{{teamSize}}</span>
-                </div>
-                <div>
-                    <span class="game-list__item-property">Currently Players:</span>
-                    <span class="game-list__item-property-value">{{players.length}}</span>
-                </div>
-                <button class="button button-action button-join" id="button-join" data-room-id="{{_id}}">Join the game</button>  
-            </div>
+<div class='game-list__item-info'>
+  <h3 class='game-list__item-title'>Game: {{_id}}</h3>
+  <div>
+    <span class='game-list__item-property'>Status:</span>
+    <span class='game-list__item-property-value'>{{status}}</span>
+  </div>
+  <div>
+    <span class='game-list__item-property'>Rounds:</span>
+    <span class='game-list__item-property-value'>{{roundsTotal}}</span>
+  </div>
+  <div>
+    <span class='game-list__item-property'>Time per Round:</span>
+    <span class='game-list__item-property-value'>{{timePerRound}} minutes</span>
+  </div>
+  <div>
+    <span class='game-list__item-property'>Players per Team:</span>
+    <span class='game-list__item-property-value'>{{teamSize}}</span>
+  </div>
+  <div>
+    <span class='game-list__item-property'>Currently Players:</span>
+    <span class='game-list__item-property-value'>{{players.length}}</span>
+  </div>
+  <button
+    class='button button-action button-join'
+    id='button-join'
+    data-room-id='{{_id}}'
+  >Join the game</button>
+</div>
