feat: sign-up page client-side script

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,215 +1,1 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-:root {
-  font-size: 10px;
-}
-
-body {
-  line-height: 1.5;
-  font-family: "Manrope", sans-serif;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-button,
-input {
-  border: none;
-  background: none;
-  padding: 0;
-  font: inherit;
-  color: inherit;
-  cursor: pointer;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-fieldset {
-  border: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-.text {
-  font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-size: 1.6rem;
-}
-.text--small {
-  font-size: 1.2rem;
-  font-weight: 400;
-}
-
-.auth-input {
-  position: relative;
-  line-height: 1;
-}
-.auth-input::placeholder {
-  color: #999;
-}
-.auth-input::before {
-  content: attr(data-label);
-  position: absolute;
-  left: 3.5%;
-  padding-inline: 0.4rem;
-  transform: translateY(-50%);
-  font-size: 1.2rem;
-  font-weight: 400;
-  line-height: inherit;
-  color: #000;
-  background-color: #fff;
-}
-.auth-input__input {
-  padding: 1rem 1rem;
-  width: 100%;
-  border: 0.1rem solid #000;
-  border-radius: 0.4rem;
-  line-height: inherit;
-}
-.auth-input__input:focus {
-  outline: none;
-}
-
-.button {
-  display: inline-block;
-  padding: 1rem 3rem;
-  border: 0.1rem solid #000;
-  border-radius: 0.4rem;
-  line-height: 1;
-  font-weight: 500;
-  color: #fff;
-  background-color: #000;
-  transition: color 0.5s, background-color 0.5s;
-}
-.button:hover {
-  color: #000;
-  background-color: #fff;
-}
-.button--outline {
-  color: #000;
-  background-color: #fff;
-}
-.button--outline:hover {
-  color: #fff;
-  background-color: #000;
-}
-
-.navbar {
-  padding-block: 2.4rem;
-}
-
-.wrapper {
-  display: flex;
-  margin: 0 auto;
-  padding-inline: 3.2rem;
-  width: min(100%, 1240px);
-}
-.wrapper--column {
-  flex-direction: column;
-}
-
-.game-list {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 1.6rem;
-  width: 100%;
-}
-
-.game-tile {
-  padding: 0.8rem;
-  border: 0.1rem solid #000;
-  border-radius: 0.4rem;
-}
-.game-tile__id {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  padding: 0.8rem 1.6rem;
-  border-radius: 0.4rem;
-  color: #fff;
-  background-color: #000;
-}
-
-@media (width >= 550px) {
-  .game-list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (width >= 800px) {
-  .game-list {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-@media (width >= 1050px) {
-  .game-list {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-.sign-up {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100vh;
-}
-.sign-up header {
-  padding-bottom: 4.8rem;
-}
-.sign-up header .wrapper {
-  justify-content: center;
-}
-.sign-up .wrapper {
-  align-items: center;
-}
-.sign-up .auth-form, .sign-up .more {
-  width: 100%;
-  max-width: 25rem;
-}
-.sign-up .auth-input {
-  margin-bottom: 1.6rem;
-}
-.sign-up .auth-input:last-of-type {
-  margin-bottom: 3.2rem;
-}
-.sign-up .button {
-  width: 100%;
-}
-.sign-up .more {
-  padding-bottom: 3rem;
-}
-.sign-up .more p {
-  padding-block: 0.8rem;
-  text-align: center;
-  line-height: 1;
-}
-
-/*# sourceMappingURL=main.css.map */
+*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}:root{font-size:10px}body{line-height:1.5;font-family:"Manrope",sans-serif}ul,ol{list-style:none}table{border-collapse:collapse;width:100%}img{max-width:100%;height:auto}button,input{border:none;background:none;padding:0;font:inherit;color:inherit;cursor:pointer}a{text-decoration:none;color:inherit}fieldset{border:none}h1,h2,h3,h4,h5,h6{margin:0}.text{font-family:"Manrope",sans-serif;font-optical-sizing:auto;font-style:normal;font-size:1.6rem}.text--small{font-size:1.2rem;font-weight:400}.auth-input{position:relative;line-height:1}.auth-input::placeholder{color:#999}.auth-input::before{content:attr(data-label);position:absolute;left:3.5%;padding-inline:.4rem;transform:translateY(-50%);font-size:1.2rem;font-weight:400;line-height:inherit;color:#000;background-color:#fff}.auth-input__input{padding:1rem 1rem;width:100%;border:.1rem solid #000;border-radius:.4rem;line-height:inherit}.auth-input__input:focus{outline:none}.auth-input__input--error{border-color:#ff1a1a}.auth-input__info{padding-top:.4rem;padding-inline:1rem;line-height:inherit;color:#ff1a1a}.button{display:inline-block;padding:1rem 3rem;border:.1rem solid #000;border-radius:.4rem;line-height:1;font-weight:500;color:#fff;background-color:#000;transition:color .5s,background-color .5s}.button:hover{color:#000;background-color:#fff}.button--outline{color:#000;background-color:#fff}.button--outline:hover{color:#fff;background-color:#000}.navbar{padding-block:2.4rem}.wrapper{display:flex;margin:0 auto;padding-inline:3.2rem;width:min(100%,1240px)}.wrapper--column{flex-direction:column}.game-list{display:grid;grid-template-columns:repeat(1, 1fr);gap:1.6rem;width:100%}.game-tile{padding:.8rem;border:.1rem solid #000;border-radius:.4rem}.game-tile__id{display:flex;justify-content:center;align-items:center;gap:1rem;padding:.8rem 1.6rem;border-radius:.4rem;color:#fff;background-color:#000}@media(width >= 550px){.game-list{grid-template-columns:repeat(2, 1fr)}}@media(width >= 800px){.game-list{grid-template-columns:repeat(3, 1fr)}}@media(width >= 1050px){.game-list{grid-template-columns:repeat(4, 1fr)}}.sign-up{display:flex;flex-direction:column;justify-content:center;height:100vh}.sign-up header{padding-bottom:4.8rem}.sign-up header .wrapper{justify-content:center}.sign-up .wrapper{align-items:center}.sign-up .auth-form,.sign-up .more{width:100%;max-width:30rem}.sign-up .auth-input{margin-bottom:1.6rem}.sign-up .auth-input:last-of-type{margin-bottom:3.2rem}.sign-up .button{width:100%}.sign-up .more{padding-bottom:3rem}.sign-up .more p{padding-block:.8rem;text-align:center;line-height:1}/*# sourceMappingURL=main.css.map */
