--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/main.css">
-  <script src="./js/axios/axios.cjs" defer></script>
+  <link rel="icon" href="./assets/favicon.png" type="image/png">
+  <title>Alias | {{pageTitle}}</title>
+  <link rel="stylesheet" href="./css/main.css" />
+  <script src="./js/axios/axios.min.js"></script>
 </head>
   {{{body}}}
 </html>
