--- a/src/public/scss/components/_buttons.scss
+++ b/src/public/scss/components/_buttons.scss
@@ -5,6 +5,7 @@
   padding: 1rem 3rem;
   border: 0.1rem solid $primary-color;
   border-radius: 0.4rem;
+  text-align: center;
   line-height: 1;
   font-weight: 500;
   color: $secondary-color;
