fix: static assets

--- a/src/public/scss/layouts/_navbar.scss
+++ b/src/public/scss/layouts/_navbar.scss
@@ -1,3 +1,15 @@
 .navbar {
-  padding-block: 2.4rem;
+  padding-block: 1.6rem;
+
+  &__settings {
+    width: 3.8rem;
+    height: 3.8rem;
+    img {
+      width: 100%;
+    }
+  }
+
+  .wrapper {
+    justify-content: space-between;
+  }
 }
