--- a/src/views/sign-up.handlebars
+++ b/src/views/sign-up.handlebars
@@ -1,4 +1,4 @@
-<body class="sign-up">
+<body class="auth-page">
     <header>
         <div class="wrapper">
             <img src='./assets/alias.svg' alt='' />
