--- a/src/public/css/gameLobby.css
+++ b/src/public/css/gameLobby.css
@@ -1,5 +1,5 @@
 .game-lobby * {
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .game-lobby {
@@ -34,4 +34,15 @@
 }
 
 .team2__list {
+}
+
+.chat-window {
+  background-color: bisque;
+  height: 20vh;
+  border: 1px solid black;
+  overflow-y: scroll;
+}
+
+.chat-window__list {
+  list-style: none;
 }
