--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/css/index.css' />
     <link rel='stylesheet' href='/css/modal.css' />
     <link rel='stylesheet' href='/css/gameLobby.css' />
+    <script src='/js/socket.io.js' type='module' defer></script>
   </head>
   <body>
 
