--- a/src/views/partials/gameListItem.handlebars
+++ b/src/views/partials/gameListItem.handlebars
@@ -10,7 +10,7 @@
   </div>
   <div>
     <span class='game-list__item-property'>Time per Round:</span>
-    <span class='game-list__item-property-value'>{{timePerRound}} minutes</span>
+    <span class='game-list__item-property-value'>{{timePerRound}}</span>
   </div>
   <div>
     <span class='game-list__item-property'>Players per Team:</span>
