--- a/src/views/partials/gameListItem.handlebars
+++ b/src/views/partials/gameListItem.handlebars
@@ -18,7 +18,7 @@
   </div>
   <div>
     <span class='game-list__item-property'>Currently Players:</span>
-    <span class='game-list__item-property-value'>{{players.length}}</span>
+    <span class='game-list__item-property-value'>{{totalPlayers}}</span>
   </div>
   <button
     class='button button-action button-join'
