feat: user profile icon

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,7 @@
 
     <header>
         <h1>Welcome to the Alias Game !</h1>
+         {{> userProfile }}
     </header>
     <main>
         <button class="button" id="createGameBtn">Create Game</button>
@@ -30,4 +31,5 @@
 <script src="/js/handleGameListChanges.js" type="module"></script>
 <script src="/js/handleJoinRoom.js" type="module"></script>
 <script src="/js/handleCreateGameFormSubmit.js" type="module"></script>
+<script src="/js/handleOptionsUserProfile.js" type="module"></script>
 
