--- a/src/views/partials/filterGamesForm.handlebars
+++ b/src/views/partials/filterGamesForm.handlebars
@@ -1,6 +1,6 @@
-<form method='GET' action='/'>
+<form class='filter_Container' method='GET' action='/'>
   <div>
-    <label for='status'>Game Status</label>
+    <label class='label' for='status'>game status</label>
     <select name='status'>
       <option value=''>All</option>
       <option value='lobby'>Lobby</option>
@@ -9,7 +9,7 @@
   </div>
 
   <div>
-    <label for='teamSize'>Players per Team</label>
+    <label class='label' for='teamSize'>players per team</label>
     <select name='teamSize'>
       <option value=''>All</option>
       <option value='2'>2 Players</option>
@@ -19,7 +19,7 @@
   </div>
 
   <div>
-    <label for='timePerRound'>Time per Round</label>
+    <label class='label' for='timePerRound'>time per round</label>
     <input
       type='number'
       name='timePerRound'
