--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -3,9 +3,9 @@
   padding: 9px 20px;
   font-size: 14px;
   font-weight: 600;
-  color: #fff;
-  background-color: rgb(102, 102, 248);
-  border: 2px solid transparent;
+  color:black;
+  border: 2px solid black;
+  background-color: white;
   border-radius: 5px;
   cursor: pointer;
   text-align: center;
