--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,12 +1,17 @@
 
     <header>
-        <h1>Welcome to the Alias Game !</h1>
+        <img
+      src='/images/icons/logo.svg'
+      alt='Logo'
+      class='logo__icon'
+    />
          {{> userProfile }}
     </header>
     <main>
-        <button class="button" id="createGameBtn">Create Game</button>
+     <h2>Your game</h2>
+        <button class="button" id="createGameBtn">+ create Game</button>
         
-        <p>Join or create a game to start playing!</p>
+        <h3>Other games</h3>
 
         {{> filterGamesForm }}
      
