--- a/src/views/partials/userProfile.handlebars
+++ b/src/views/partials/userProfile.handlebars
@@ -16,7 +16,7 @@
 <div id='optionsModal' class='modal'>
   <div class='modal-content'>
     <span class='close'>&times;</span>
-    <button class='user-profile__button' id='logoutButton'>Logout</button>
+    <button class='button' id='logoutButton'>Logout</button>
     <div>
       <h5>Rounds played:</h5>
       <h5>Total score:</h5>
