--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,4 @@
-
+<div class='gameLobbyContainer'>
     <header>
         <img
       src='/images/icons/logo.svg'
@@ -31,6 +31,7 @@
       {{> createNewGameModal }}
 
     </main>
+    </div>
 
 
 <script src="/js/handleGameListChanges.js" type="module"></script>
