--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+
+body {
+  font-family: 'Manrope', sans-serif;
+}
 .button {
   display: inline-block;
   padding: 9px 20px;
