--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <title>{{title}}</title>
-    <link rel='icon' href='/images/favicon.ico' type='image/x-icon' />
+    <link rel="icon" href="./assets/favicon.png" type="image/png">
     <link rel='stylesheet' href='/css/index.css' />
     <link rel='stylesheet' href='/css/modal.css' />
     <link rel='stylesheet' href='/css/gameLobby.css' />
