feat: login & register connection

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,7 @@
 <div class='gameLobbyContainer'>
     <header>
         <img
-      src='/images/icons/logo.svg'
+      src='/assets/alias.svg'
       alt='Logo'
       class='logo__icon'
     />
