--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./assets/favicon.png" type="image/png">
     <title>{{title}}</title>
     <link rel="icon" href="./assets/favicon.png" type="image/png">
     <link rel='stylesheet' href='/css/index.css' />
     <link rel='stylesheet' href='/css/modal.css' />
     <link rel='stylesheet' href='/css/gameLobby.css' />
     <link rel='stylesheet' href='/css/userProfile.css' />
+    <link rel="stylesheet" href="./css/main.css" />
+    <script src="./js/axios/axios.min.js"></script>
     <script src='/js/socket.io/socket.io.js' type='module' defer></script>
   </head>
   <body>
