--- a/src/views/partials/userProfile.handlebars
+++ b/src/views/partials/userProfile.handlebars
@@ -5,7 +5,7 @@
     aria-label='User Profile'
   >
     <img
-      src='/images/icons/profile.svg'
+      src='/assets/profile.svg'
       alt='User Profile'
       class='user-profile__icon'
     />
