--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,12 +1,5 @@
 <div class='gameLobbyContainer'>
-    <header>
-        <img
-      src='/assets/alias.svg'
-      alt='Logo'
-      class='logo__icon'
-    />
-         {{> userProfile }}
-    </header>
+    {{> navbar}}
     <main>
      <h2>Your game</h2>
         <button class="button" id="createGameBtn">+ create Game</button>
