--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -22,6 +22,13 @@ body {
     transform 0.2s;
 }
 
+.navbar {
+  display: flex;
+  padding: 30px;
+  height: 10vh;
+  align-items: center;
+}
+
 .game-list {
   display: flex;
   gap: 20px;
