--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -83,6 +83,7 @@
 
   </div>
 </div>
+{{> footer}}
 
 <script src='/js/handleJoinTeam.js' type='module'></script>
 <script src='/js/handleLeaveRoom.js' type='module'></script>
