--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <link rel='stylesheet' href='/css/userProfile.css' />
    <link rel="stylesheet" href="/css/main.css" />
     <link rel='stylesheet' href='/css/newGame.css' />
+     <link rel='stylesheet' href='/css/footer.css' />
 
     <script src='/js/axios/axios.min.js'></script>
     <script src='/js/socket.io/socket.io.js' type='module' defer></script>
