style: rename enpoint

--- a/src/views/in-game.handlebars
+++ b/src/views/in-game.handlebars
@@ -1,5 +1,5 @@
 {{> navbar}}
-<div class='new-game' id='start-game'>
+<div class='new-game' id='in-game'>
   <div class="team-nav">
 
     <section class="team-container">
