feat: add frontend game logic

--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -89,3 +89,4 @@
 <script src='/js/gameLobby/handleLeaveRoom.js' type='module'></script>
 <script src='/js/gameLobby/handleGameLobbyChat.js' type='module'></script>
 <script src='/js/gameLobby/handleGameLobbyUpdate.js' type='module'></script>
+<script src='/js/gameLobby/handleGameStart.js' type='module'></script>
