--- a/src/views/sign-up.handlebars
+++ b/src/views/sign-up.handlebars
@@ -31,5 +31,5 @@
             </div>
         </section>
     </main>
-    <script type="module" src="/js/auth/signUp.js"></script>
+    <script type="module" src="./js/auth/signUp.js"></script>
 <body/>
