--- a/src/public/css/newGame.css
+++ b/src/public/css/newGame.css
@@ -58,9 +58,9 @@
 }
 
 .secret {
-    height: 5vh;
+  height: 5vh;
   border: 1px solid black;
-  margin: 15px 0
+  margin: 15px 0;
 }
 
 .chatSend {
@@ -69,14 +69,23 @@
 }
 
 .score {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: large;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: large;
 }
 
 .time {
-    font-weight: bold;
-    color: darkcyan;
+  font-weight: bold;
+  color: darkcyan;
+}
+
+.chat-input {
+  border: 1px solid black;
+}
+
+.chat-input-field {
+  width: 50vw;
+  margin: auto;
 }
