feat: userController.unit.test

--- a/src/views/log-in.handlebars
+++ b/src/views/log-in.handlebars
@@ -23,5 +23,5 @@
             </div>
         </section>
     </main>
-    <script type="module" src="./js/logIn.js"></script>
+    <script type="module" src="/js/auth/logIn.js"></script>
 <body/>
