--- a/src/public/css/newGame.css
+++ b/src/public/css/newGame.css
@@ -66,6 +66,7 @@
 .chatSend {
   width: 60vw;
   margin: 5px 0 15px 0;
+  margin-bottom: 7vh;
 }
 
 .score {
@@ -81,11 +82,6 @@
   color: darkcyan;
 }
 
-.chat-input {
-  border: 1px solid black;
-}
-
-.chat-input-field {
-  width: 50vw;
-  margin: auto;
+.inputfield {
+ color: darkcyan;
 }
