--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -65,7 +65,8 @@
     </div>
   </div>
 
-  <div class='chat'>
+  <div class="wrapper wrapper--column">
+    <div class='chat'>
     <div class='chat-window' id='chat-window'>
       <ul class='chat-window__list' id='chat-window__list'>
 
@@ -73,6 +74,7 @@
     </div>
     <input type='text' id='game-lobby-message-input' />
     <button class='button' id='button-game-lobby-send-message'>Send message</button>
+  </div>
   </div>
   <div class='action-buttons-container' id='action-buttons-container'>
 
