--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,8 +1,8 @@
 <div class='gameLobbyContainer'>
     {{> navbar}}
-    <main>
+    <main class="wrapper wrapper--column">
      <h2>Your game</h2>
-        <button class="button" id="createGameBtn">+ create Game</button>
+        <button class="button" id="createGameBtn">+ Create game</button>
         
         <h3>Other games</h3>
 
