--- a/src/public/css/gameLobby.css
+++ b/src/public/css/gameLobby.css
@@ -1,5 +1,10 @@
-.gameLobbyContainer {
+/* .gameLobbyContainer {
 padding: 3px;
+} */
+
+h3 {
+  font-size: 1.6rem;
+  padding-bottom: 1rem;
 }
 
 .game-lobby__game-name {
@@ -39,15 +44,23 @@ padding: 3px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items:center;
-  background-color:white;
+  align-items: center;
+  background-color: white;
   color: black;
   padding: 10px;
   border-radius: 5px;
-  width: 90vw;
   border: 1px solid black;
 }
 
 .label {
-  padding-right: 3px;
+  font-weight: 600;
+  padding-right: 5px;
+}
+
+input[name='timePerRound'],
+input[name='playersPerTeam'],
+input[name='totalRounds'] {
+  border: 0.5px solid black;
+  border-radius: 4px;
+  padding: 2px 4px;
 }
