--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 body {
@@ -9,7 +8,7 @@ body {
   padding: 9px 20px;
   font-size: 14px;
   font-weight: 600;
-  color:black;
+  color: black;
   border: 2px solid black;
   background-color: white;
   border-radius: 5px;
@@ -24,7 +23,6 @@ body {
 
 .navbar {
   display: flex;
-  padding: 30px;
   height: 10vh;
   align-items: center;
 }
@@ -34,20 +32,40 @@ body {
   gap: 20px;
   flex-wrap: wrap;
   list-style-type: none;
-  padding: 0;
-  margin: 20px;
+}
+
+#createGameBtn {
+  margin-top: 1rem;
+  margin-bottom: 2.4rem;
 }
 
 .game-list__item {
-  background-color: aliceblue;
-  margin-block: 30px;
-  padding: 5px;
+  background-color: #eee;
+  padding: 1.6rem;
+  border-radius: 0.6rem;
 }
 
 .game-list__item:not(.full) {
-  border: 2px solid rgb(28, 95, 28);
+  font-size: 1.4rem;
+  border: 1px solid rgb(12, 233, 12);
+}
+.game-list__item-title {
+  font-size: 1.4rem;
+  padding-bottom: 1rem;
 }
 
 .game-list__item-property {
+  display: inline-block;
   font-weight: bold;
+  padding-bottom: 0.4rem;
+  font-size: 1.4rem;
+}
+
+.button-join {
+  width: 100%;
+  margin-top: 1.2rem;
+}
+
+body {
+  padding-bottom: 10rem;
 }
