--- a/src/views/partials/userProfile.handlebars
+++ b/src/views/partials/userProfile.handlebars
@@ -15,7 +15,7 @@
 
 <div id='optionsModal' class='modal'>
   <div class='modal-content'>
-    <span class='close'>&times;</span>
     <button class='button' id='logoutButton'>Logout</button>
+    <div class='close'>&times;</div>
   </div>
 </div>
