--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -95,6 +95,8 @@
       id='button-leave-room'
     >Leave Room</button>
 
+    <div id="start-button-container"></div>
+
   </div>
 </div>
 {{> footer}}
